# IV_GICP

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_cpp.py
config/: datasets.yaml  pipeline.yaml
docs/: IV-GICP_ Information-Theoretic Adaptive Voxelization and Intensity-Augmented GICP with Retroactive Map Distribution Refinement .md  USAGE.md  ablation_100fr_summary.md  ablation_c1_analysis.md  alpha_normalization.md  c1_only_paper_strategy.md  c3.md  compare.md  drift_analysis.md  eval.md  implementation_notes.md  problem.md
examples/: _run_single.py  run_ablation.py  run_eval_comparison.py  run_form_benchmark.py  run_full_eval.py  run_geode_eval.py  run_helipr_eval.py  run_hilti_eval.py  run_iv_gicp.py  run_iv_gicp_vs_kiss.py  run_kitti.py  run_kitti_benchmark.py  run_metro_eval.py  run_mulran_eval.py  run_subt_eval.py
iv_gicp/: __init__.py  adaptive_voxelization.py  config_loader.py  data_io.py  degeneracy_analysis.py  distribution_propagation.py  factor_graph.py  fast_kdtree.py  fim_utils.py  flat_voxel_map.py  form_map.py  gpu_backend.py  iv_gicp.py  kitti_loader.py  map_refinement.py  metrics.py  odometry.py  pipeline.py  se3_utils.py  visualize.py
iv_gicp/cpp/: __init__.py  iv_gicp_core.cpp  iv_gicp_cpp.cpp  iv_gicp_map.cpp
results/: ablation_results.json
results/geode/Shield_tunnel1_gamma/: gicp_baseline.tum  gt.tum  iv_gicp.tum  kiss_icp.tum  results.json
results/geode/Urban_Tunnel01/: gicp_baseline.tum  gt.tum  iv_gicp.tum  (+2 more)
results/hilti/: gicp_baseline.tum  iv_gicp.tum  kiss_icp.tum  results.json  timing_results.json
(+21 files in other folders)
