[project]
name = "iv-gicp"
version = "0.1.0"
description = "IV-GICP: Information-Theoretic Adaptive Voxelization and Intensity-Augmented GICP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "open3d>=0.17.0",
    "tqdm>=4.64.0",
    "matplotlib>=3.5.0",
    "kiss-icp>=1.2.3",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iv_gicp"]

